tests/expected_output/indirection-requires-pointer-operand/000000-clang-14.0-x86_64-pc-linux-gnu.txt
indirection-requires-pointer-operand.c:2:12: error: indirection requires pointer operand ('int' invalid)
    return *argc;
           ^~~~~
dcc explanation: you are trying to use 'argc' as a pointer.
You can not do this because 'argc' is of type int.
